# LG_CSEU_Simple-KMS

./: README.MD  README.md  reset_MQ
KMS_client/: CMakeLists.txt  help.txt
KMS_client/inc/: KMS_client.h  command_send.h  mq.h  openssl_utils.h
KMS_client/recvd/: createKey-2024-02-11-00%3A49%3A32  createKey-2024-02-13-09:51:05  createKey-2024-02-20-15:48:42  createKey-2024-02-20-18:31:41  createKey-2024-02-20-18:32:50  createKey-2024-02-20-18:33:32  createKey-2024-02-20-18:33:56  createKey-2024-02-20-18:34:19  createKey-2024-02-21-12:53:54  createKey-2024-02-21-12:53:59  createKey-2024-02-21-12:57:08  decrypt-2024-02-20-15:50:26  decrypt-2024-02-20-18:36:28  encrypt-2024-02-20-15:49:32  encrypt-2024-02-20-18:35:44  sessionKey.txt
KMS_client/src/: boot_proc.c  command_proc.c  crypto_operation.c  deserialize.c  encrypt_payload.c  main.c  mq_recv.c  mq_send.c  serialize.c  test
KMS_server/: CMakeLists.txt
KMS_server/inc/: KMS_server.h  common.h  mq.h  openssl_utils.h  operation.h
KMS_server/security_data/: session_key_list.txt  uid_list.txt
KMS_server/src/: crypto_operation.c  deserialize_tlv.c  do_op.c  key_derivation.c  main.c  mq_recv.c  mq_send.c  serialize.c  test
storage/: 생성형 AI.txt  프로젝트 발표 정효영.pptx
test_code/: CMakeLists.txt  a.out  cmakeTest.c  evp_aes_128_ecb_test.c  fgetsTest.c  mq_perm_find  mq_permission_find.c  struct_ecvrypt.c  test
test_code/inc/: a.h
test_code/src/: a.out  tlv_serialize.c
